--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -d --watch",
+    "start": "nodemon server/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ryanwlaw/Product-Info-Pre-Checkout.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "Beth Johnson",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ryanwlaw/Product-Info-Pre-Checkout/issues"
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "webpack": "^2.2.1"
   },
-  "homepage": "https://github.com/ryanwlaw/Product-Info-Pre-Checkout#readme"
+  "dependencies": {
+    "body-parser": "^1.17.0",
+    "express": "^4.15.0",
+    "jquery": "^3.1.1",
+    "mongoose": "^4.9.6",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "request": "^2.81.0"
+  }
 }
