--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack -d --watch",
     "start": "nodemon server/index.js",
-    "seed" : "seed"
+    "seed": "node seed/item-seeder.js"
   },
   "author": "Beth Johnson",
   "license": "ISC",
@@ -23,8 +23,11 @@
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
     "node-mongo-seeds": "^3.1.0",
+    "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "request": "^2.81.0"
   }
 }
