--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-star-ratings": "^2.3.0",
     "request": "^2.81.0"
   }
 }
