--- a/package.json
+++ b/package.json
@@ -6,30 +6,38 @@
   "scripts": {
     "build": "webpack -d --watch",
     "start": "nodemon server/index.js",
-    "seed": "node seed/item-seeder.js"
+    "seed": "node seed/item-seeder.js",
+    "test": "jest"
   },
   "author": "Ryan Law",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "@babel/core": "^7.1.6",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
     "jest": "^23.6.0",
-    "webpack": "^2.2.1"
+    "webpack": "^4.28.0",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
     "node-mongo-seeds": "^3.1.0",
     "path": "^0.12.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react": "^16.7.0",
+    "react-css-modules": "^4.7.8",
+    "react-dom": "^16.7.0",
     "react-star-ratings": "^2.3.0",
-    "request": "^2.81.0"
+    "regenerator-runtime": "^0.13.1",
+    "request": "^2.81.0",
+    "styled-components": "^4.1.3"
   }
 }
