--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.6",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^2.1.0",
     "jest": "^23.6.0",
     "webpack": "^4.28.0",
     "webpack-cli": "^3.1.2"
@@ -35,6 +36,7 @@
     "react": "^16.7.0",
     "react-css-modules": "^4.7.8",
     "react-dom": "^16.7.0",
+    "react-fontawesome": "^1.6.1",
     "react-star-ratings": "^2.3.0",
     "regenerator-runtime": "^0.13.1",
     "request": "^2.81.0",
