--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-mongo-seeds": "^3.1.0",
     "path": "^0.12.7",
     "react": "^16.7.0",
+    "react-awesome-modal": "^2.0.5",
     "react-css-modules": "^4.7.8",
     "react-dom": "^16.7.0",
     "react-fontawesome": "^1.6.1",
