--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-regular-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
@@ -37,7 +41,6 @@
     "react-awesome-modal": "^2.0.5",
     "react-css-modules": "^4.7.8",
     "react-dom": "^16.7.0",
-    "react-fontawesome": "^1.6.1",
     "react-star-ratings": "^2.3.0",
     "regenerator-runtime": "^0.13.1",
     "request": "^2.81.0",
