--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "react-dom": "^16.7.0",
     "react-star-ratings": "^2.3.0",
     "regenerator-runtime": "^0.13.1",
-    "request": "^2.81.0",
-    "styled-components": "^4.1.3"
+    "request": "^2.81.0"
   }
 }
